--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 numpy
-pandas
 torch
 
 einops==0.8.1
 huggingface_hub==0.33.1
 matplotlib==3.9.3
+mplfinance==0.12.10b0
 pandas==2.2.2
 tqdm==4.67.1
+requests==2.32.3
+fastapi==0.115.0
+uvicorn==0.30.6
